@@ -1,6 +1,11 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.000001
+ [Added / configure requires]
+ - perl 5.006
+
+ [Added / test requires]
+ - perl 5.006
 
 2.000000 2014-09-24T05:26:53Z
  [Added / configure requires]
@@ -97,4 +102,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 0.01000404 2009-08-25T16:18:59Z
  [Added / runtime requires]
  - Data::Dump
-
