@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.000001
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 2.000000 2014-09-24T05:26:53Z
  [Added / configure recommends]
@@ -24,4 +33,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.01000613 2009-08-28T01:55:48Z
 
 0.01000404 2009-08-25T16:18:59Z
-
